--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,3 @@
-# .github/workflows/codeql.yml
-
 name: "CodeQL Advanced"
 
 on:
@@ -34,10 +32,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
-      - name: Cache node_modules
+      - name: Cache .npm
         uses: actions/cache@v4
         with:
           path: ~/.npm
@@ -46,7 +44,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Build Next.js app
         run: npm run build
