--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         include:
           - language: javascript-typescript
-            build-mode: manual
+            build-mode: none
 
     steps:
       - name: Checkout repository
@@ -35,7 +35,7 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Cache .npm
+      - name: Cache npm
         uses: actions/cache@v4
         with:
           path: ~/.npm
@@ -45,9 +45,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install --legacy-peer-deps
-
-      - name: Build Next.js app
-        run: npm run build
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
