custom amplify run scripts & mono repo tsconfig

--- a/infrastructure/amplify/tsconfig.json
+++ b/infrastructure/amplify/tsconfig.json
@@ -1,17 +1,11 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2022",
-    "module": "es2022",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "baseUrl": "../../infrastructure/amplify",
+    "baseUrl": ".",
     "paths": {
       "@auth/*": ["auth/*"],
       "@data/*": ["data/*"]
     }
-  }
+  },
+  "include": ["./**/*.ts"]
 }
